add published at date to books
